[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprite.gd" type="Script" id=2]
[ext_resource path="res://audio/bounce.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/out.wav" type="AudioStream" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/0.png-a40ad89f2b324078c71969e6ed3922f1.stex"

[node name="sprite" type="Sprite"]
scale = Vector2( 0.2, 0.2 )
texture = SubResource( 1 )
script = ExtResource( 2 )

[node name="gamble" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="efecto_scale" type="Tween" parent="."]

[node name="efecto_final" type="Tween" parent="."]

[node name="bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 0.5

[node name="out" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0
pitch_scale = 0.8

[connection signal="tween_completed" from="efecto_final" to="." method="_on_efecto_final_tween_completed"]
[connection signal="finished" from="out" to="." method="_on_out_finished"]
